// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResetPasswordConfirm /> should render properly 1`] = `
Array [
  .emotion-0 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 32px;
  padding-bottom: 32px;
}

<h3
    className="emotion-0"
  >
    Enter New Password
  </h3>,
  .emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:hover {
  border: 2px solid #ffffff;
}

.emotion-4 {
  padding-top: 8px;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="newPassword1"
    >
      Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-3"
        disabled={false}
        id="newPassword1"
        name="newPassword1"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-4"
    >
       
    </div>
  </div>,
  .emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:hover {
  border: 2px solid #ffffff;
}

.emotion-4 {
  padding-top: 8px;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="newPassword2"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-3"
        disabled={false}
        id="newPassword2"
        name="newPassword2"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-4"
    >
       
    </div>
  </div>,
  .emotion-0 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <button
      aria-disabled={true}
      className="emotion-1"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>,
]
`;

exports[`<ResetPasswordConfirm /> should render properly 2`] = `
Array [
  .emotion-0 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 32px;
  padding-bottom: 32px;
}

<h3
    className="emotion-0"
  >
    Enter New Password
  </h3>,
  .emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:hover {
  border: 2px solid #ffffff;
}

.emotion-4 {
  padding-top: 8px;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="newPassword1"
    >
      Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-3"
        disabled={false}
        id="newPassword1"
        name="newPassword1"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-4"
    >
       
    </div>
  </div>,
  .emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:hover {
  border: 2px solid #ffffff;
}

.emotion-4 {
  padding-top: 8px;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="newPassword2"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-3"
        disabled={false}
        id="newPassword2"
        name="newPassword2"
        onChange={[Function]}
        type="password"
        value="bar"
      />
    </div>
    <div
      className="emotion-4"
    >
       
    </div>
  </div>,
  .emotion-0 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>,
]
`;

exports[`<ResetPasswordConfirm /> should render properly 3`] = `
Array [
  .emotion-0 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 32px;
  padding-bottom: 32px;
}

<h3
    className="emotion-0"
  >
    Enter New Password
  </h3>,
  .emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:hover {
  border: 2px solid #ffffff;
}

.emotion-4 {
  padding-top: 8px;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="newPassword1"
    >
      Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-3"
        disabled={false}
        id="newPassword1"
        name="newPassword1"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-4"
    >
       
    </div>
  </div>,
  .emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:hover {
  border: 2px solid #ffffff;
}

.emotion-4 {
  padding-top: 8px;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="newPassword2"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-3"
        disabled={false}
        id="newPassword2"
        name="newPassword2"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-4"
    >
       
    </div>
  </div>,
  .emotion-0 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>,
]
`;

exports[`<ResetPasswordConfirm /> should render properly 4`] = `
Array [
  .emotion-0 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 32px;
  padding-bottom: 32px;
}

<h3
    className="emotion-0"
  >
    Enter New Password
  </h3>,
  .emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #c92300;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:hover {
  border: 2px solid #ffffff;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-5 {
  color: #c92300;
  font-style: italic;
  white-space: pre-line;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="newPassword1"
    >
      Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-3"
        disabled={false}
        id="newPassword1"
        name="newPassword1"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-4"
    >
      <span
        className="emotion-5"
      >
        Error
      </span>
       
    </div>
  </div>,
  .emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #c92300;
  border-width: 2px;
}

.emotion-3:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-3:hover {
  border: 2px solid #ffffff;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-5 {
  color: #c92300;
  font-style: italic;
  white-space: pre-line;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="newPassword2"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-3"
        disabled={false}
        id="newPassword2"
        name="newPassword2"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-4"
    >
      <span
        className="emotion-5"
      >
        Error
      </span>
       
    </div>
  </div>,
  .emotion-0 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited {
  background-color: #73b61c;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <button
      className="emotion-1"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>,
]
`;
